# orc-llm

./: .gitattributes  .gitignore  MODEL_SOURCE.md  ORC_LLM_DataFrame.ipynb  README.md  pyproject.toml  requirements.txt
examples/: chat_request.json  evaluate_dataframe_request.json  notebook_dataframe_usage.py
scripts/: download_model.py  run_api.sh
src/orc_llm/: __init__.py  api.py  dataframe.py  model.py  notebook.py  prompts.py  settings.py
tests/: test_dataframe.py  test_notebook.py  test_prompts.py
